# build-image

./: Dockerfile  pyproject.toml
.bmad-core/: install-manifest.yaml
.bmad-core/agents/: pm.md
.github/workflows/: build-image.yml
