[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "--cov-append",
]
markers = [
    "performance: marks tests as performance tests that validate SLA requirements",
    "slow: marks tests as slow running tests",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests that validate complete workflows",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[project]
name = "e2e-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "pydantic>=2.11.7",
    "pydantic-settings==2.6.1",
    "python-dotenv>=1.0.1",
    "SQLAlchemy==2.0.35",
    "alembic==1.13.2",
    "psycopg[binary]==3.2.2",
    "httpx>=0.27.2",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.21.0",
    "pgvector>=0.4.1",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "python-multipart>=0.0.9",
    # WebSocket and AI dependencies
    "litellm>=1.52.0",
    "websockets>=13.0",
    # AI Model dependencies
    "torch>=2.9.1",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "accelerate>=0.25.0",
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
    "openhands-sdk>=1.5.0",
    "openhands-tools>=1.5.0",
    "mlflow>=3.7.0",
    "boto3>=1.42.6",
    "tqdm>=4.67.1",
    "pytest>=9.0.1",
    "openpyxl>=3.1.5",
    "polars>=1.36.1",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "B", "I", "UP"]
lint.ignore = [
    "B008",  # Do not perform function calls in argument defaults (FastAPI Depends is standard)
    "E501",  # Line too long - we handle this with formatting
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "requests>=2.31.0",
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
